{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 94,
  "lineage": "7ee25a77-f88d-da44-47e6-89ba6b5809a0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6b83214371d77fc",
            "domain": "vpc",
            "id": "eipalloc-0c6b83214371d77fc",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-72-50-128.compute-1.amazonaws.com",
            "public_ip": "52.72.50.128",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Name": "ECS-Social-app"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d7d1a16cdc5ee3bd",
            "domain": "vpc",
            "id": "eipalloc-0d7d1a16cdc5ee3bd",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-226-98-53.compute-1.amazonaws.com",
            "public_ip": "3.226.98.53",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Name": "ECS-Social-app"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905417995835:internet-gateway/igw-0396c27fc251f2895",
            "id": "igw-0396c27fc251f2895",
            "owner_id": "905417995835",
            "tags_all": {
              "Name": "ECS-Social-app"
            },
            "vpc_id": "vpc-0045a8eaf81e7e007"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905417995835:loadbalancer/app/example-lb/0351f1bc2f49a9c0",
            "arn_suffix": "app/example-lb/0351f1bc2f49a9c0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "example-lb-108883566.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:905417995835:loadbalancer/app/example-lb/0351f1bc2f49a9c0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "example-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c0ab1ba75d9a5674"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-054d075e6de171217"
              },
              {
                "subnet_id": "subnet-0fcc4b61d0c8224f7"
              }
            ],
            "subnets": [
              "subnet-054d075e6de171217",
              "subnet-0fcc4b61d0c8224f7"
            ],
            "tags_all": {
              "Name": "ECS-Social-app"
            },
            "vpc_id": "vpc-0045a8eaf81e7e007",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "socialAPP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905417995835:listener/app/example-lb/0351f1bc2f49a9c0/34f8817d59b341c4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:905417995835:targetgroup/example-target-group/4c5d38fe96bf62bf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:905417995835:listener/app/example-lb/0351f1bc2f49a9c0/34f8817d59b341c4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:905417995835:loadbalancer/app/example-lb/0351f1bc2f49a9c0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Name": "ECS-Social-app"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.default",
            "aws_lb_target_group.socialAPP",
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "socialAPP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:905417995835:targetgroup/example-target-group/4c5d38fe96bf62bf",
            "arn_suffix": "targetgroup/example-target-group/4c5d38fe96bf62bf",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:905417995835:targetgroup/example-target-group/4c5d38fe96bf62bf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "example-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Name": "ECS-Social-app"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0045a8eaf81e7e007"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c6b83214371d77fc",
            "association_id": "eipassoc-07be36211fe2f7032",
            "connectivity_type": "public",
            "id": "nat-083cb58260132e489",
            "network_interface_id": "eni-03559fa5bf2f70877",
            "private_ip": "10.32.2.31",
            "public_ip": "52.72.50.128",
            "subnet_id": "subnet-0fcc4b61d0c8224f7",
            "tags_all": {
              "Name": "ECS-Social-app"
            }
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d7d1a16cdc5ee3bd",
            "association_id": "eipassoc-0d3cc6113f44189a0",
            "connectivity_type": "public",
            "id": "nat-01faee3f513db0ffd",
            "network_interface_id": "eni-03e8fd1b4f4f6e955",
            "private_ip": "10.32.3.146",
            "public_ip": "3.226.98.53",
            "subnet_id": "subnet-054d075e6de171217",
            "tags_all": {
              "Name": "ECS-Social-app"
            }
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0396c27fc251f2895",
            "id": "r-rtb-0926beb1733ebbc511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0926beb1733ebbc51",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905417995835:security-group/sg-0c0ab1ba75d9a5674",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0ab1ba75d9a5674",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example-alb-security-group",
            "name_prefix": "",
            "owner_id": "905417995835",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Name": "ECS-Social-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0045a8eaf81e7e007"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "socialAPP_task",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905417995835:security-group/sg-0610663d96e9c78c2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0610663d96e9c78c2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0ab1ba75d9a5674"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "example-task-security-group",
            "name_prefix": "",
            "owner_id": "905417995835",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Name": "ECS-Social-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0045a8eaf81e7e007"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905417995835:subnet/subnet-0fcc4b61d0c8224f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.32.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fcc4b61d0c8224f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905417995835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Name": "ECS-Social-app"
            },
            "vpc_id": "vpc-0045a8eaf81e7e007"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905417995835:subnet/subnet-054d075e6de171217",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.32.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054d075e6de171217",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905417995835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Name": "ECS-Social-app"
            },
            "vpc_id": "vpc-0045a8eaf81e7e007"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905417995835:vpc/vpc-0045a8eaf81e7e007",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.32.0.0/16",
            "default_network_acl_id": "acl-0238191bbcea02ca5",
            "default_route_table_id": "rtb-0926beb1733ebbc51",
            "default_security_group_id": "sg-07536b2103f8af3e3",
            "dhcp_options_id": "dopt-08b9af88d24aee36c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0045a8eaf81e7e007",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0926beb1733ebbc51",
            "owner_id": "905417995835",
            "tags_all": {
              "Name": "ECS-Social-app"
            }
          }
        }
      ]
    }
  ]
}